src/style.css
/* CSS RESET */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
  font-family: 'Playfair Display', serif;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
}
/* Intro */

#intro {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/desklayout.jpg");
  /* -webkit-background-size: cover; */
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: 100vh;
  margin-bottom: 0;
  color: white;
  font: sans-serif;
}

#introHeader {
  display:table;
  width: 100%;
  height: 100%;
  text-align: center;
  font-size: 80px;
}

.introMiddle {
  display: table-cell;
  vertical-align: middle;
}

.introBox {
  box-sizing: border-box;
  width: 90%;
  padding: 1%;
  margin: 0 auto;
  border: 5px solid #fff;
  color: #fff;
  background: 0 0;
  -webkit-transition: background .3s ease-in-out;
  -moz-transition: background .3s ease-in-out;
  transition: background .3s ease-in-out;
}

.introTitle {
  font-size: 1em;
}

.title {
  font-family: 'Advent Pro', sans-serif; 
  letter-spacing: 0.2em;
}

.titleSmall {
  font-size: .5em;
}

.scroll {
  padding: 15px;
  color: #fff;
  -webkit-transition: background .3s ease-in-out;
  -moz-transition: background .3s ease-in-out;
  transition: background .3s ease-in-out;
}

.scroll:hover, .contactIcon:hover {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {    
    0% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {    
    0% {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

/* About */


#aboutme {
  box-sizing: border-box;
  padding: 2%;
  width: 90%;
  margin: 0 auto;
  text-align: center;
  margin-top: 5%;
}

#profile {
  width: 150px;
  height: 150px;
  border-radius: 100%;
  margin: 5% auto;
  background: url('../assets/unicorn.jpg');
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  border: 1px solid #888;
  box-shadow: 0 0 5px #888;
}

.aboutTitle {
  font-size: 2em;
  font-weight: bolder;
  margin-bottom: 5%;
}

.aboutParagraph {
  text-align: justify;
  text-justify: inter-word;
}

/*Project */

#project {
  background-color: #353439;
  color: #fff;
  text-align: center;
  width: 100%;
  height: 100%;
  padding-bottom: 3em;
}

.projectTitle {
  font-size: 2em;
  font-weight: bolder;
  margin-top: 1em;
  padding-top: 1.5em;
}

#projectmain {
  width:90%;
  margin: 0 auto;
}

.projectSection {
  width: 100%;
  font-size: 1.5em;
  margin: 2em auto;
}

.projectName {
  width: 80%;
  display: inline-block;
  text-align: left;
}

.projectIcon {
  width: 20%
  display: inline-block;
  text-align: right;
}

/* Contact */

#contact {
  background-color: #26262a;
  color: #fff;
  font-size: 2em;
  text-align: center;
  padding-bottom: 2em;
}

.contactTitle {
  font-weight: bolder;
  padding-top: 2em;
}

.contactIcon {
  font-size: 1.5em;
  margin: .5em;
}

/* Extra Small Devices, Phones */ 
@media (min-width : 480px) {
  .introBox {
    width: 80%;
    padding: 5%;
  }

  #aboutme, #projectmain {
    width: 80%;
  }
}

/* Small Devices, Tablets */
@media (min-width : 768px) {
  .introBox {
    width: 70%;
  }

  #aboutme, #projectmain {
    width: 70%;
  }
}

/* Medium Devices, Desktops */
@media (min-width : 992px) {
  .introBox {
    width: 60%;
    padding: 2%;
  }

  #aboutme, #projectmain {
    width: 60%;
  }
}

